# AdVerify

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: detection_bench.rs
examples/: sample_bid.json
src/: bid_stream.rs  brand_safety.rs  detection.rs  lib.rs  main.rs  ml.rs  reporting.rs  viewability.rs
tests/: bid_stream_test.rs  brand_safety_test.rs  detection_test.rs
