[package]
name = "adverify"
version = "0.1.0"
edition = "2021"
description = "Programmatic ad fraud detection & brand safety engine"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
rustls = "0.23"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
ndarray = { version = "0.16", features = ["serde"] }
thiserror = "2"
anyhow = "1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
http-body-util = "0.1"
bytes = "1"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "detection_bench"
harness = false

[lib]
name = "adverify"
path = "src/lib.rs"

[[bin]]
name = "adverify"
path = "src/main.rs"
